--- a/src/main/resources/assets/uk121/lang/en_us.json
+++ b/src/main/resources/assets/uk121/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "item.uk121.ruby": "Ruby",
-  "generator.void": "Not but Void"
+  "generator.earth": "Planet Earth",
+  "generator.void": "Void World"
 }
